src/app/app.component.scss
.toolbar-container {
  display: flex;
  justify-content: space-between;
}

.toolbar-container-left {
  display: flex;
  align-items: center;
}

.toolbar-container-right {

}

.web-shop-label {
  cursor: pointer;
}

.search-bar {
  display: flex;
  align-items: center;
  padding: 8px;
  border: 1px solid darkgrey;
  border-radius: 24px;

  &__icon {
  }

  &__input {
    background-color: inherit;
    border: none;
  }

}

.container {
  height: 100vh;
  border: 1px solid rgba(0, 0, 0, 0.5);
}

.sidenav-content {
  display: flex;
  justify-content: center;
}

.quick-profile-view-card {
  z-index: 10;
  border: 1px solid gray;
  height: 120px;
  width: 240px;
  background-color: white;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.sidenav {
  display: flex;
  padding: 20px;
  background-color: #f5f5f5;
  width: 300px;
}


.no-bullets {
  list-style-type: none;
  margin: 0;
  padding: 8px;
  cursor: pointer;

  &:hover {
    background-color: white;
  }
}

.tree-node {
  cursor: pointer;
}


.icon-label-wrapper {
  display: flex;
  justify-content: flex-start;
  padding: 8px;
  cursor: pointer;
}

